--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,14 +21,13 @@
     "eslint-config-next": "13.0.6",
     "framer-motion": "^7.6.18",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "sass": "^1.56.1",
-    "serverless-mysql": "^1.5.4",
+    "sqlite3": "^5.1.4",
     "typescript": "4.9.3"
   }
 }
