--- a/package.json
+++ b/package.json
@@ -12,22 +12,35 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/multer": "^1.4.7",
+    "@types/mysql": "^2.15.21",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/validator": "^13.7.10",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^7.6.18",
+    "js-base64": "^3.7.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "mysqljs/mysql",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "sass": "^1.56.1",
-    "sqlite3": "^5.1.4",
-    "typescript": "4.9.3"
+    "swr": "^2.0.0",
+    "typescript": "4.9.3",
+    "validator": "^13.7.0"
   }
 }
